# pg_dev

./: .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  schemachain
examples/tdd/: Dockerfile  docker-compose.yml  run-tests.sh  schema.sql
examples/tdd/tests/: test_access_user.sql
pg_dev/: main.py
python/schemachain/: .pylintrc
schemachain/: main.py
src/: cmd_check.incl.bash  cmd_generate-migration.incl.bash  cmd_generate-migration_old.incl.bash  cmd_generate.incl.bash  cmd_generate_migration.incl.bash  cmd_generate_migration_new.incl.bash  cmd_help.incl.bash  cmd_status.incl.bash  dispatch.incl.bash  get_next_migration_index.incl.bash  main.incl.bash  migrations.incl.bash  postgres.incl.bash  repo.incl.bash  repo_utils.incl.bash  schema.incl.bash  schema_utils.incl.bash  util.incl.bash
test/: cmd_generate_migration.bats  cmd_status.bats  commands.bats  common.bash  internals.bats  test.bats
tests/: base.py  conftest.py  test_cmd_generate_migration.py  test_cmd_history.py  test_internals.py  test_schemachain.py  util.py
