[tool.poetry]
name = "pg_dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
include = ["vendor/pg_tmp"]

[tool.poetry.dependencies]
python = "^3.7"
pglast = {git = "https://github.com/lelit/pglast", rev = "v3"}
GitPython = "^3.1.17"
migra = "^3.0.1616366383"
sqlbag = "^0.1.1617247075"
psycopg2-binary = "^2.8.6"
click = "^8.0.0"
tabulate = "^0.8.9"
pytest-timeout = "^1.4.2"
shortuuid = "^1.0.1"

[tool.poetry.dev-dependencies]
watchdog = {extras = ["watchmedo"], version = "^2.1.1"}
pytest-black = "^0.3.12"
pylint = "^2.8.2"
taskipy = "^1.7.0"
pytest-watch = "^4.2.0"
pylint-pytest = "^1.1.2"
pytest = "^6.2.4"
pytest-only = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]

[tool.taskipy.tasks]
test = "pytest tests --timeout 10"
# Change --capture=sys to --capture=tee-sys to printf-debug tests
test_watch = "ptw -- --capture=sys --timeout 20"
lint = "pylint --load-plugins pylint_pytest pg_dev/*.py tests/*.py"
format = "black pg_dev/*.py tests/*.py"

[tool.poetry.scripts]
pg_dev = 'pg_dev.main:cli'

